--- a/Style.css
+++ b/Style.css
@@ -11,6 +11,10 @@ header{
     height:100vh;
     color: white;
     background-color: #2196f3;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }    
 
 h1{
@@ -46,6 +50,10 @@ section{
     border:1px solid grey;
     border-radius:20px;
     margin-bottom:20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 .submit:hover{
@@ -84,4 +92,8 @@ footer{
     height:124px;
     background-color:black;
     color:lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
